--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -1,7 +1,6 @@
 ---
 title: "Jets 101"
 teaching: 1h30
-exercises: 3
 questions:
 - "What is a jet?"
 - "Are there different types of jets? What is a recluster algorithm?"
@@ -21,7 +20,7 @@ Full set of intro slides: Slides 1-24 (FIXME)
 > ## After following the instructions in the setup:
 >
 > ~~~
-> cd <YOUR WORKING DIRECTORY>/notebooks/
+> cd <YOUR WORKING DIRECTORY>/notebooks/DAS/
 > source /cvmfs/sft.cern.ch/lcg/views/LCG_103/x86_64-centos7-gcc11-opt/setup.sh
 > jupyter notebook --no-browser --port=8888 --ip 127.0.0.1
 > ~~~
