move it to alpha version

--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -1,6 +1,7 @@
 ---
 title: "Jets 101"
-teaching: 1h30
+teaching: 10 
+exercises: 20
 questions:
 - "What is a jet?"
 - "Are there different types of jets? What is a recluster algorithm?"
