--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -32,6 +32,9 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 ## Jet Basics
 
+
+<img src="../fig/episode1/jets101_1.png" alt="" >
+
 > ## Open a notebook
 >
 > For this part, open the notebook called `Jets_101.ipynb` and run Exercise 1.
