--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -32,8 +32,14 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 ## Jet Basics
 
+### Jets as signatures of quarks and gluons
 
 <img src="../fig/episode1/jets101_1.png" alt="" >
+![signature](../fig/episode1/jets101_1.png){: .image-with-shadow }
+
+> ## But jets are messy
+> ![messy](../fig/episode1/jets101_2.png)
+{: .callout}
 
 > ## Open a notebook
 >
