--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -34,12 +34,21 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 ### Jets as signatures of quarks and gluons
 
-<img src="../fig/episode1/jets101_1.png" alt="" >
-![signature](../fig/episode1/jets101_1.png){: .image-with-shadow }
+ * Most collisions involve quarks scattering.
+ * Proton collisions are really gluon and quark collisions. Proton contain quarks and gluons
+![jets101_1](../fig/episode1/jets101_1.png){: .image-with-shadow }
 
-> ## But jets are messy
-> ![messy](../fig/episode1/jets101_2.png)
-{: .callout}
+ * Parton showering    → Hadronization   → Jet of color neutral particles
+ * Only particles in "color singlet” state observed in nature: confinement
+ * Kinematic properties of the jet resemble that of the initial partons
+ * Energy composition: About 65% charged hadrons, 25% neutral pions, 10% neutral hadrons.
+
+
+![jets101_2](../fig/episode1/jets101_1.png){: .image-with-shadow }
+
+### What is a jet?
+
+
 
 > ## Open a notebook
 >
