--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -37,7 +37,7 @@ Full set of intro slides: Slides 1-24 (FIXME)
  * Most collisions involve quarks scattering.
  * Proton collisions are really gluon and quark collisions. Proton contain quarks and gluons
 
-![jets101_1](../fig/episode1/jets101_1.png "Jets"){: .image-with-shadow }
+![Image alt text](../fig/episode1/jets101_1.png "Jets"){: .image-with-shadow }
 
  * Parton showering    → Hadronization   → Jet of color neutral particles
  * Only particles in "color singlet” state observed in nature: confinement
