--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -37,8 +37,7 @@ Full set of intro slides: Slides 1-24 (FIXME)
  * Most collisions involve quarks scattering.
  * Proton collisions are really gluon and quark collisions. Proton contain quarks and gluons
 
-<img src="../fig/episode1/jets101_1.png" alt="Jets at parton level" style="width: 50%"/>
-
+![Image alt text](../fig/episode1/jets101_1.svg "Jets"){: .image-with-shadow }
 
  * Parton showering    → Hadronization   → Jet of color neutral particles
  * Only particles in "color singlet” state observed in nature: confinement
