--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -39,7 +39,12 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 ![Image alt text](../fig/episode1/jets101_1.svg "Jets"){: .image-with-shadow }
 
- * Parton showering    → Hadronization   → Jet of color neutral particles
+ <figure>
+  <img src="../fig/episode1/jets101_1.svg" alt="" style="width:50%">
+  <figcaption>Parton showering    → Hadronization   → Jet of color neutral particles</figcaption>
+</figure>
+{: .image-with-shadow }
+
  * Only particles in "color singlet” state observed in nature: confinement
  * Kinematic properties of the jet resemble that of the initial partons
  * Energy composition: About 65% charged hadrons, 25% neutral pions, 10% neutral hadrons.
