--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -34,35 +34,36 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 ### Jets as signatures of quarks and gluons
 
- * Most collisions involve quarks scattering.
+ * Most collisions at hadron colliders involve quarks scattering.
  * Proton collisions are really gluon and quark collisions. Proton contain quarks and gluons
 
-![Image alt text](../fig/episode1/jets101_1.svg "Jets"){width=50%}
-
- <figure>
+<figure>
   <img src="../fig/episode1/jets101_1.svg" alt="" style="width:50%">
-  <figcaption>Parton showering    → Hadronization   → Jet of color neutral particles</figcaption>
+  <center><figcaption>Parton showering    → Hadronization   → Jet of color neutral particles</figcaption></center>
 </figure>
-{: .image-with-shadow }
 
- * Only particles in "color singlet” state observed in nature: confinement
- * Kinematic properties of the jet resemble that of the initial partons
+ * Only particles in "color singlet” state are observed in nature, due to color confinement.
+ * Kinematic properties of the jet intent to resemble that of the initial partons.
  * Energy composition: About 65% charged hadrons, 25% neutral pions, 10% neutral hadrons.
+ * What we try to do in our detectors is to measure the decay products to get access to particle/parton level:
+
+<figure>
+  <img src="../fig/episode1/jets101_2.svg" alt="" style="width:50%">
+  <center><figcaption>Parton showering    → Hadronization   → Jet of color neutral particles</figcaption></center>
+</figure>
 
 
-![jets101_2](../fig/episode1/jets101_1.png){: .image-with-shadow }
 
 ### What is a jet?
 
 
+### Exercise 1
 
 > ## Open a notebook
+> This preliminary exercise will illustrate some of the basic properties of jets, like the four-momentum quantities: pt, eta, phi, and mass. We will use nanoAOD files currently widely used with the CMS Collaborators. For more information about nanoAOD follow [this link](https://gitlab.cern.ch/cms-nanoAOD/nanoaod-doc/-/wikis/home). At the end of the notebook, you will be able to see all the quantities stored in the `Jet` collection.
 >
 > For this part, open the notebook called `Jets_101.ipynb` and run Exercise 1.
 {: .checklist}
-
-
-This preliminary exercise will illustrate some of the basic properties of jets, like the four-momentum quantities: pt, eta, phi, and mass. We will use nanoAOD files currently widely used with the CMS Collaborators. For more information about nanoAOD follow [this link](https://gitlab.cern.ch/cms-nanoAOD/nanoaod-doc/-/wikis/home). At the end of the notebook, you will be able to see all the quantities stored in the `Jet` collection.
 
 > ## Discussion 1.1
 >
