--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -49,7 +49,7 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 <figure>
   <img src="../fig/episode1/jets101_2.svg" alt="" style="width:50%">
-  <center><figcaption>Parton showering    → Hadronization   → Jet of color neutral particles</figcaption></center>
+  <center><figcaption>After the particles interact with our detector we can reconstruct other stable particles. </figcaption></center>
 </figure>
 
  * This give us a more generalised picture: _Almost everything becomes a jet: g/q/t/W/Z/H/PU_ 
@@ -57,15 +57,25 @@ Full set of intro slides: Slides 1-24 (FIXME)
 ### What is a jet?
 
 > ## Looking at an event display from our data
-> <img src="../fig/episode1/jets101_1.svg" alt="" style="width:50%">
+> <img src="../fig/episode1/jets101_3.svg" alt="" style="width:50%">
 > How do you determine which particles are included in a jet?
 {: .discussion}
 
 From a list of particles one can form jets, an object to reconstruct the shower of particles produced from a quark or gluon. Each particle belonging to a jet is known as a constituent. Each has a 4-vector that can be used for further studies.
 
 We need a jet algorithm to collect the particles in a shower. This defines a __Clustering
-Algorithm__. This algorithm iteratively find the two particles in the event which are closest in some distance measure and combine them. Combine two particles if $d_{ij} < d_{iB}$. Stop when dij > diB.
+Algorithm__. This algorithm:
+ * iteratively find the two particles in the event which are closest in some distance measure and combine them. 
+ * Combine two particles if $d_{ij} < d_{iB}$, where $d_{ij} = \min(p^{2p}_{ti}, p^{2p}_{tj}) \Delta R^{2}_{ij} / R^2 $ and $d_{iB} = p_{ti}^{2p}$. 
+   * if $p=1$ then _kt algorithm_ (KT)
+   * if $p=0$ then _Cambridge Aachen algorithm_ (CA)
+   * if $p=-1$ then _kt algorithm_ (KT)
+ * Stop when $d_{ij} > d_{iB}$.
 
+<figure>
+  <img src="../fig/episode1/jets101_4.svg" alt="" style="width:50%">
+  <center><figcaption>A more visual way of think about the recluster algorithm.</figcaption></center>
+</figure>
 
 
 
