--- a/_episodes/01-jets101.md
+++ b/_episodes/01-jets101.md
@@ -34,25 +34,25 @@ Full set of intro slides: Slides 1-24 (FIXME)
 
 ### Jets as signatures of quarks and gluons
 
- * Most collisions at hadron colliders involve quarks scattering.
- * Proton collisions are really gluon and quark collisions. Proton contain quarks and gluons
+Most collisions at hadron colliders involve quarks scattering. Proton collisions are really gluon and quark collisions. Proton contain quarks and gluons.
 
 <figure>
   <img src="../fig/episode1/jets101_1.svg" alt="" style="width:50%">
   <center><figcaption>Parton showering    → Hadronization   → Jet of color neutral particles</figcaption></center>
 </figure>
 
- * Only particles in "color singlet” state are observed in nature, due to color confinement.
- * Kinematic properties of the jet intent to resemble that of the initial partons.
- * Energy composition: About 65% charged hadrons, 25% neutral pions, 10% neutral hadrons.
- * What we try to do in our detectors is to measure the decay products to get access to particle/parton level:
+Only particles in "color singlet” state are observed in nature, due to color confinement. The kinematic properties of the jet intent to resemble that of the initial partons. What we try to do in our detectors is to measure the decay products to get access to particle/parton level:
 
 <figure>
   <img src="../fig/episode1/jets101_2.svg" alt="" style="width:50%">
   <center><figcaption>After the particles interact with our detector we can reconstruct other stable particles. </figcaption></center>
 </figure>
 
- * This give us a more generalised picture: _Almost everything becomes a jet: g/q/t/W/Z/H/PU_ 
+> ## What is the composition of jets?
+>
+> Energy composition: About 65% charged hadrons, 25% neutral pions (photons), 10% neutral hadrons.
+> <img src="../fig/episode1/jets101_7.svg" alt="" style="width:50%">
+{: .callout}
 
 ### What is a jet?
 
@@ -61,7 +61,7 @@ Full set of intro slides: Slides 1-24 (FIXME)
 > How do you determine which particles are included in a jet?
 {: .discussion}
 
-From a list of particles one can form jets, an object to reconstruct the shower of particles produced from a quark or gluon. Each particle belonging to a jet is known as a constituent. Each has a 4-vector that can be used for further studies.
+From a list of particles one can form jets, an object to reconstruct the shower of particles produced from a quark or gluon. Each particle belonging to a jet is known as a constituent. Each has a 4-vector that can be used for further studies. This give us a more generalised picture: _Almost everything becomes a jet: g/q/t/W/Z/H/PU_ 
 
 We need a jet algorithm to collect the particles in a shower. This defines a __Clustering
 Algorithm__. A good jet algorithm is _infrared and collinear safe_. The set of hard jets should be unchanged by soft emission and collinear splitting.
@@ -72,7 +72,7 @@ Most jet algorithms at hadron colliders use a so-called "clustering sequence". T
 
 These algorithms follow this recipe:
  * iteratively find the two particles in the event which are closest in some distance measure and combine them. 
- * Combine two particles if $d_{ij} < d_{iB}$, where $d_{ij} = min(p^{2p}_{ti}, p^{2p}_{tj}) \Delta R^{2}_{ij} / R^2 $ and $d_{iB} = p_{ti}^{2p}$. 
+ * Defining$d_{ij} = min(p^{2p}_{ti}, p^{2p}_{tj}) \Delta R^{2}_{ij} / R^2 $ and $d_{iB} = p_{ti}^{2p}$. We combine two particles if $d_{ij} < d_{iB}$. 
    * if $p=1$ then _kt algorithm_ (KT)
    * if $p=0$ then _Cambridge Aachen algorithm_ (CA)
    * if $p=-1$ then _kt algorithm_ (KT)
@@ -183,7 +183,7 @@ In CMS we recluster two types of PFJets:
 > We need to apply the jet energy corrections (JEC) described in the next exercise. But before doing that, we'll review the jet clustering algorithms used in CMS.
 {: .solution}
 
-## Jet types at the LHC
+### Jet types at the LHC
 
 Jets are reconstructed physics objects representing the hadronization and fragmentation of quarks and gluons. CMS primarily uses anti-$k_{\mathrm{T}}$ jets with a cone-size of $R=0.4$ to reconstruct this jet type. We have algorithms that distinguish heavy-flavour (b or c) quarks (which are in the domain of the BTV POG), quark- vs gluon-originated jets, and jets from the main $pp$ collision versus jets formed primarily from pileup particles.
 
@@ -196,7 +196,7 @@ You can also read these excellent overviews of jet substructure techniques:
 - [Boosted objects: a probe of beyond the Standard Model physics](http://arxiv.org/abs/1012.5412) by Abdesselam et al.
 - [Looking inside jets: an introduction to jet substructure and boosted-object phenomenology](https://arxiv.org/abs/1901.10342) by Marzani, Soyez, and Spannowsky.
 
-## Jet types and algorithms in CMS
+### Jet types and algorithms in CMS
 
 The standard jet algorithms are all implemented in the CMS reconstruction software, [CMSSW](github.com/cms-sw/cmssw). However, a few algorithms with specific parameters (namely AK4, AK8, and CA15) have become standard tools in CMS; these jet types are extensively studied by the JetMET POG, and are highly recommended. These algorithms are included in the centrally produced CMS samples, at the AOD, miniAOD, and nanoAOD data tiers (note that miniAOD and nanoAOD are most commonly used for analysis, while AOD is much less common these days, and is not widely available on the grid). Other algorithms can be implemented and tested using the **JetToolbox** (more in the [following link](https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetToolbox)).
 
